--- a/templates/partials/base-candidate.html.twig
+++ b/templates/partials/base-candidate.html.twig
@@ -22,7 +22,7 @@
 						<i class="fa-solid fa-bell"></i>
 					</div>
 					<div class="navbar-account">
-						<img class="nav-img-account" src="images/account-img.png" alt="my-account_img"/>
+						<img class="nav-img-account" src="/images/account-img.png" alt="my-account_img"/>
 						<div class="navbar-account--toggle">
 							<ul class="navbar-account__content">
 								<li>
