--- a/public/style/candidate.css
+++ b/public/style/candidate.css
@@ -41,9 +41,9 @@ header {
     margin: 20px auto
 }
 
-form {
+.form-docs {
     align-items: center;
-    gap: 10px
+    gap: 30px
 }
 .cell{
     border : 1px solid var(--main-title-color);
@@ -137,7 +137,7 @@ i:hover {
 
 
 div.container-account > div {
-    height: 300px;
+    min-height: 300px;
     min-width: 450px;
     padding: 10px 15px;
 
@@ -146,19 +146,7 @@ div.container-account > div {
     align-items: center; */
 }
 
-div.container-account >.container-change-password {
-    min-height : 300px;
-    height:inherit;
-}
 
-.container-change-password>.alert{
-
-    width: 75%;
-    margin:auto;
-    padding : 1rem 0.5rem;
-    margin-top : 20px
-
-}
 
 .alert>p{
     margin-bottom: 0;
@@ -197,6 +185,23 @@ div.container-account >.container-change-password {
     color:var(--main-bg-color)
 }
 
+.container_profile-pic{
+    height: 300px;
+    width: 300px;
+}
+
+.form-update-delete-pic
+{
+    display: flex;
+    justify-content: center;
+    gap:20px;
+    margin: 20px auto;
+}
+
+.profile_pic {
+    width: 100%;
+    height: auto;
+}
 
 .container-account {
     display: grid;
@@ -213,6 +218,28 @@ div.container-account >.container-change-password {
 }
 
 /* Formulaire changement de mdp :  */
+
+
+
+div.container-account >.container-change-password {
+    min-height : 300px;
+    height:inherit;
+    margin:-100px
+}
+
+.container-change-password>.alert{
+
+    width: 75%;
+    margin:auto;
+    padding : 1rem 0.5rem;
+    margin-top : 20px
+
+}
+
+.form-change-password{
+    gap:10px;
+    align-items: center;
+}
 
 .ligne {
     width: 80%;
@@ -271,21 +298,74 @@ button.btn-hidden{
     display: none;
 }
 
-@media screen and (max-width: 480px){
 
-    .dataTable{
-        display: flex;
-        justify-content: flex-end;
-        width: 350px;
-    }
-}
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 800px){
 
     .container-account {
         display: grid;
         grid-template-columns: 1fr;
+        gap: 50px
+    }
+
+   
+    .col-1 {
+
+        width: 300px
+    }
+
+    .col-2 {
+        width: 300px
+    }
+
+    td{
+        padding: 15px 20px;
+    }
+
+    .container-dashboard{
+        margin-top: 40px;
+    }
+
+@media all and (max-width: 600px){
+
+    .dataTable{
+        display: flex;
+        width: 350px;
+    }
+    .container-titre-dashboard {
+        padding: 0 10px;
+        margin: 20px auto
+    }
+    div.container-account > div {
+        min-width: inherit;
+        width: auto;
+        /* height: 250px; */
+    }
+    .form-floating{
+        width: auto;
+    }
+
+    
+    .col-1 {
+
+        width: 200px
+    }
+
+    .col-2 {
+        width: 200px
+    }
+
+    td{
+        padding: 10px 15px;
+    }
+
+    .container-dashboard{
+        margin-top: 40px;
+    }
+
 }
+
+
     
 }
 
