--- a/templates/pages/trainee/index.html.twig
+++ b/templates/pages/trainee/index.html.twig
@@ -1,28 +1,44 @@
-{% extends "partials/base-trainee.html.twig" %} 
+{% extends "partials/base-trainee.html.twig" %}
 
 {% block body %}
-<div class="container-titre-dashboard">
-    <h2>Bienvenue sur votre tableau de bord ! </h2>
-</div>
-<div class="container-dashboard">
-    <div class="dashboard-personal-info">
-        <div class="personal-info-content">
-            <h2>Formation : {{ training.TitleFormation }}</h2>
-            <div class='personal-data'>
-                <p><strong>Vos informations personnelles :</strong></p>
-                <p>Prénom : {{ trainee.FirstName}}</p>
-                <p>Nom : {{ trainee.FamilyName}}</p>
-                <p>Email : {{ trainee.Email}}</p>
-            </div>
-        </div>
-    </div>
-    <div class="profile-pic_recap-report">
-        <img src="ressources" alt='photo-profil'>
-        <div class="recap">
-            <p>Nombre d'abscences non justifiées :<span class='dash-unjustified-report'> {{nbUnjustifiedAbsences}}/5 </span></p>
-            <p>Nombre de retards non justifiées : <span class='dash-unjustified-report'> {{nbUnjustifiedDelays}}/10 </span></p>
-        </div>
-    </div>
-</div>
-{% endblock %}
+	<div class="container-titre-dashboard">
+		<h2>Bienvenue sur votre tableau de bord !
+		</h2>
+	</div>
+	<div class="container-dashboard">
+		<div class="dashboard-personal-info">
+			<div class="personal-info-content">
+				<p>
+					<strong>Vos informations personnelles :</strong>
+				</p>
+				<p>
+					<span class="orange">Prénom :</span>
+					{{ trainee.FirstName}}</p>
+				<p>
+					<span class="orange">Nom :</span>
+					{{ trainee.FamilyName}}</p>
+				<p>
+					<span class="orange">Email :</span>
+					{{ trainee.Email}}</p>
+				<p>
+					<span class="orange">Formation :</span>
+					{{ training.TitleFormation }}
+				</p>
+			</h2>
+		</div>
+	</div>
+	<ul class="recap-absence_delay">
 
+		<li>
+			<i class="fa-solid fa-calendar-days"></i>
+			Nombre d'absences non justifiées :
+			<span class='dash-unjustified-report'>{{nbUnjustifiedAbsences}}/5</span>
+		</li>
+		<li>
+			<i class="fa-solid fa-clock"></i>
+			Nombre de retards non justifiés :
+			<span class='dash-unjustified-report'>{{nbUnjustifiedDelays}}/10</span>
+		</li>
+
+	</ul>
+</div></div></div></div>{% endblock %}
