--- a/templates/pages/admin/gestion/classroom/addClassroom.gestion.html.twig
+++ b/templates/pages/admin/gestion/classroom/addClassroom.gestion.html.twig
@@ -27,7 +27,7 @@
             </div>
             {% if msg is defined %}
                 <div>
-                    <p>{{ msg }}</p>
+                    <p class="text-danger">{{ msg }}</p>
                 </div>
             {% endif %}
         </div>
