--- a/templates/pages/home/register.html.twig
+++ b/templates/pages/home/register.html.twig
@@ -25,12 +25,13 @@
 							{{ form.createInputText('birthdate','date','Date de naissance', 'space', POST.birthdate) }}
 
 						</fieldset>
-						<fieldset>
+						<fieldset class="ContAllAddress">
 							<legend>Adresse</legend>
 
 							{{ form.createInputText('streetNumber','text','Numéro de voie', 'space' , POST.streetNumber)}}
 							{{ form.createInputText('laneType','text','Type de voie', 'space' , POST.laneType) }}
 							{{ form.createInputText('street','text','Nom de rue', 'space', POST.street) }}
+							<div class="contAutoComplete"></div>
 							{{ form.createInputText('addressComplement','text','Complément d adresse', 'space', POST.addressComplement)}}
 							{{ form.createInputText('postalCode','text', 'Code Postal', 'space', POST.postalCode) }}
 							{{ form.createInputText('city','text','Ville', 'space', POST.city)}}
@@ -52,7 +53,6 @@
 							{% if(samePass == false) %}
 								<p>{{ message }}</p>
 							{% endif %}
-
 
 						</fieldset>
 						<fieldset>
